# elt_dbt

./: .user.yml  exemplo.env  profiles.yml  pyproject.toml
elt_dbt/models/: schema.yml
elt_dbt/models/datamart/: schema.yml
elt_dbt/models/staging/: stg_commodities.sql  stg_movimentacao_commodities.sql
src/: elt.py
