[tool.poetry]
name = "elt-dbt"
version = "0.1.0"
description = ""
authors = ["GenivaldoSerra <genivaldo.serra@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
streamlit = "^1.35.0"
sqlalchemy = "^2.0.30"
python-dotenv = "^1.0.1"
yfinance = "^0.2.40"
dbt-postgres = "1.7.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
